Fix W3C errors and add ellipsis on dishcard headings

--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -27,37 +27,37 @@
       <h2 class="section__heading section__heading--menu">Entrées</h2>
 
       <label class="dishcard">
-        <div class="dishcard__l-container">
+        <input type="checkbox" class="dishcard__checkbox" />
+        <span class="dishcard__l-container">
           <h3 class="dishcard__heading">Tartare de poulpe acidulé</h3>
-          <p class="dishcard__infos">Aux zestes d'orange</p>
-        </div>
-        <div class="dishcard__r-container">
-          <input type="checkbox" class="dishcard__checkbox" />
+          <span class="dishcard__infos">Aux zestes d'orange</span>
+        </span>
+        <span class="dishcard__r-container">
           <span class="dishcard__price">25€</span>
-          <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
-        </div>
+          <span class="dishcard__added"><i class="fas fa-check-circle"></i></span>
+        </span>
       </label>
       <label class="dishcard">
-        <div class="dishcard__l-container">
+        <input type="checkbox" class="dishcard__checkbox" />
+        <span class="dishcard__l-container">
           <h3 class="dishcard__heading">Velouté de légumes d'antan</h3>
-          <p class="dishcard__infos">Carotte, panais, topinambour</p>
-        </div>
-        <div class="dishcard__r-container">
-          <input type="checkbox" class="dishcard__checkbox" />
+          <span class="dishcard__infos">Carotte, panais, topinambour</span>
+        </span>
+        <span class="dishcard__r-container">
           <span class="dishcard__price">35€</span>
-          <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
-        </div>
+          <span class="dishcard__added"><i class="fas fa-check-circle"></i></span>
+        </span>
       </label>
       <label class="dishcard">
-        <div class="dishcard__l-container">
+        <input type="checkbox" class="dishcard__checkbox" />
+        <span class="dishcard__l-container">
           <h3 class="dishcard__heading">Soupe à l'oignon</h3>
-          <p class="dishcard__infos">Revisitée</p>
-        </div>
-        <div class="dishcard__r-container">
-          <input type="checkbox" class="dishcard__checkbox" />
+          <span class="dishcard__infos">Revisitée</span>
+        </span>
+        <span class="dishcard__r-container">
           <span class="dishcard__price">20€</span>
-          <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
-        </div>
+          <span class="dishcard__added"><i class="fas fa-check-circle"></i></span>
+        </span>
       </label>
     </div>
   </section>
@@ -67,37 +67,37 @@
       <h2 class="section__heading section__heading--menu">Plats</h2>
 
       <label class="dishcard">
-        <div class="dishcard__l-container">
+        <input type="checkbox" class="dishcard__checkbox" />
+        <span class="dishcard__l-container">
           <h3 class="dishcard__heading">Coquilles Saint-Jacques</h3>
-          <p class="dishcard__infos">Accompagnées d'une purée de panais</p>
-        </div>
-        <div class="dishcard__r-container">
-          <input type="checkbox" class="dishcard__checkbox" />
+          <span class="dishcard__infos">Accompagnées d'une purée de panais</span>
+        </span>
+        <span class="dishcard__r-container">
           <span class="dishcard__price">40€</span>
-          <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
-        </div>
+          <span class="dishcard__added"><i class="fas fa-check-circle"></i></span>
+        </span>
       </label>
       <label class="dishcard">
-        <div class="dishcard__l-container">
+        <input type="checkbox" class="dishcard__checkbox" />
+        <span class="dishcard__l-container">
           <h3 class="dishcard__heading">Magret de canard</h3>
-          <p class="dishcard__infos">Et parmentier de pommes de terre</p>
-        </div>
-        <div class="dishcard__r-container">
-          <input type="checkbox" class="dishcard__checkbox" />
+          <span class="dishcard__infos">Et parmentier de pommes de terre</span>
+        </span>
+        <span class="dishcard__r-container">
           <span class="dishcard__price">35€</span>
-          <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
-        </div>
+          <span class="dishcard__added"><i class="fas fa-check-circle"></i></span>
+        </span>
       </label>
       <label class="dishcard">
-        <div class="dishcard__l-container">
+        <input type="checkbox" class="dishcard__checkbox" />
+        <span class="dishcard__l-container">
           <h3 class="dishcard__heading">Pigeonneau d’Ille-et-Vilaine</h3>
-          <p class="dishcard__infos">Sur son lit de gnocchis aux légumes</p>
-        </div>
-        <div class="dishcard__r-container">
-          <input type="checkbox" class="dishcard__checkbox" />
+          <span class="dishcard__infos">Sur son lit de gnocchis aux légumes</span>
+        </span>
+        <span class="dishcard__r-container">
           <span class="dishcard__price">44€</span>
-          <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
-        </div>
+          <span class="dishcard__added"><i class="fas fa-check-circle"></i></span>
+        </span>
       </label>
     </div>
   </section>
@@ -107,44 +107,42 @@
       <h2 class="section__heading section__heading--menu">Desserts</h2>
 
       <label class="dishcard">
-        <div class="dishcard__l-container">
+        <input type="checkbox" class="dishcard__checkbox" />
+        <span class="dishcard__l-container">
           <h3 class="dishcard__heading">Pétales de violettes glacés</h3>
-          <p class="dishcard__infos">Et purée de noisettes</p>
-        </div>
-        <div class="dishcard__r-container">
-          <input type="checkbox" class="dishcard__checkbox" />
+          <span class="dishcard__infos">Et purée de noisettes</span>
+        </span>
+        <span class="dishcard__r-container">
           <span class="dishcard__price">18€</span>
-          <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
-        </div>
+          <span class="dishcard__added"><i class="fas fa-check-circle"></i></span>
+        </span>
       </label>
       <label class="dishcard">
-        <div class="dishcard__l-container">
+        <input type="checkbox" class="dishcard__checkbox" />
+        <span class="dishcard__l-container">
           <h3 class="dishcard__heading">Fondant au chocolat</h3>
-          <p class="dishcard__infos">Revisité</p>
-        </div>
-        <div class="dishcard__r-container">
-          <input type="checkbox" class="dishcard__checkbox" />
+          <span class="dishcard__infos">Revisité</span>
+        </span>
+        <span class="dishcard__r-container">
           <span class="dishcard__price">22€</span>
-          <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
-        </div>
+          <span class="dishcard__added"><i class="fas fa-check-circle"></i></span>
+        </span>
       </label>
       <label class="dishcard">
-        <div class="dishcard__l-container">
+        <input type="checkbox" class="dishcard__checkbox" />
+        <span class="dishcard__l-container">
           <h3 class="dishcard__heading">Millefeuille croustillant</h3>
-          <p class="dishcard__infos">Myrtilles et pâte d’amande</p>
-        </div>
-        <div class="dishcard__r-container">
-          <input type="checkbox" class="dishcard__checkbox" />
+          <span class="dishcard__infos">Myrtilles et pâte d’amande</span>
+        </span>
+        <span class="dishcard__r-container">
           <span class="dishcard__price">23€</span>
-          <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
-        </div>
+          <span class="dishcard__added"><i class="fas fa-check-circle"></i></span>
+        </span>
       </label>
     </div>
   </section>
 
-  <section class="section section--btn">
-    <a href="" class="btn">Commander</a>
-  </section>
+  <a href="" class="btn btn--menu">Commander</a>
 
   <footer class="footer">
     <h2 class="footer__heading">ohmyfood</h2>
