--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -27,37 +27,37 @@
       <h2 class="section__heading section__heading--menu">Entrées</h2>
 
       <label class="dishcard">
-        <div class="dishcard__l-container">
+        <input type="checkbox" class="dishcard__checkbox" />
+        <span class="dishcard__l-container">
           <h3 class="dishcard__heading">Fricassée d'escargot</h3>
-          <p class="dishcard__infos">Au piment d'espelette</p>
-        </div>
-        <div class="dishcard__r-container">
-          <input type="checkbox" class="dishcard__checkbox" />
+          <span class="dishcard__infos">Au piment d'espelette</span>
+        </span>
+        <span class="dishcard__r-container">
           <span class="dishcard__price">25€</span>
-          <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
-        </div>
+          <span class="dishcard__added"><i class="fas fa-check-circle"></i></span>
+        </span>
       </label>
       <label class="dishcard">
-        <div class="dishcard__l-container">
+        <input type="checkbox" class="dishcard__checkbox" />
+        <span class="dishcard__l-container">
           <h3 class="dishcard__heading">Foie gras de canard mi-cuit</h3>
-          <p class="dishcard__infos">Et ses copeaux de truffe noire</p>
-        </div>
-        <div class="dishcard__r-container">
-          <input type="checkbox" class="dishcard__checkbox" />
+          <span class="dishcard__infos">Et ses copeaux de truffe noire</span>
+        </span>
+        <span class="dishcard__r-container">
           <span class="dishcard__price">35€</span>
-          <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
-        </div>
+          <span class="dishcard__added"><i class="fas fa-check-circle"></i></span>
+        </span>
       </label>
       <label class="dishcard">
-        <div class="dishcard__l-container">
+        <input type="checkbox" class="dishcard__checkbox" />
+        <span class="dishcard__l-container">
           <h3 class="dishcard__heading">Oeuf au plat</h3>
-          <p class="dishcard__infos">Assaisonné à la truffe sur lit de caviar</p>
-        </div>
-        <div class="dishcard__r-container">
-          <input type="checkbox" class="dishcard__checkbox" />
+          <span class="dishcard__infos">Assaisonné à la truffe sur lit de caviar</span>
+        </span>
+        <span class="dishcard__r-container">
           <span class="dishcard__price">20€</span>
-          <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
-        </div>
+          <span class="dishcard__added"><i class="fas fa-check-circle"></i></span>
+        </span>
       </label>
     </div>
   </section>
@@ -67,37 +67,37 @@
       <h2 class="section__heading section__heading--menu">Plats</h2>
 
       <label class="dishcard">
-        <div class="dishcard__l-container">
+        <input type="checkbox" class="dishcard__checkbox" />
+        <span class="dishcard__l-container">
           <h3 class="dishcard__heading">Filet de boeuf aux herbes</h3>
-          <p class="dishcard__infos">Accompagné de sa ribambelle de légumes</p>
-        </div>
-        <div class="dishcard__r-container">
-          <input type="checkbox" class="dishcard__checkbox" />
+          <span class="dishcard__infos">Accompagné de sa ribambelle de légumes</span>
+        </span>
+        <span class="dishcard__r-container">
           <span class="dishcard__price">40€</span>
-          <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
-        </div>
+          <span class="dishcard__added"><i class="fas fa-check-circle"></i></span>
+        </span>
       </label>
       <label class="dishcard">
-        <div class="dishcard__l-container">
+        <input type="checkbox" class="dishcard__checkbox" />
+        <span class="dishcard__l-container">
           <h3 class="dishcard__heading">Parmentier de queue de boeuf</h3>
-          <p class="dishcard__infos">À la truffe noire sur sa purée de panais</p>
-        </div>
-        <div class="dishcard__r-container">
-          <input type="checkbox" class="dishcard__checkbox" />
+          <span class="dishcard__infos">À la truffe noire sur sa purée de panais</span>
+        </span>
+        <span class="dishcard__r-container">
           <span class="dishcard__price">35€</span>
-          <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
-        </div>
+          <span class="dishcard__added"><i class="fas fa-check-circle"></i></span>
+        </span>
       </label>
       <label class="dishcard">
-        <div class="dishcard__l-container">
+        <input type="checkbox" class="dishcard__checkbox" />
+        <span class="dishcard__l-container">
           <h3 class="dishcard__heading">Filet de turbot</h3>
-          <p class="dishcard__infos">Aux agrumes</p>
-        </div>
-        <div class="dishcard__r-container">
-          <input type="checkbox" class="dishcard__checkbox" />
+          <span class="dishcard__infos">Aux agrumes</span>
+        </span>
+        <span class="dishcard__r-container">
           <span class="dishcard__price">44€</span>
-          <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
-        </div>
+          <span class="dishcard__added"><i class="fas fa-check-circle"></i></span>
+        </span>
       </label>
     </div>
   </section>
@@ -107,44 +107,42 @@
       <h2 class="section__heading section__heading--menu">Desserts</h2>
 
       <label class="dishcard">
-        <div class="dishcard__l-container">
+        <input type="checkbox" class="dishcard__checkbox" />
+        <span class="dishcard__l-container">
           <h3 class="dishcard__heading">Paris-Brest</h3>
-          <p class="dishcard__infos">Revisité</p>
-        </div>
-        <div class="dishcard__r-container">
-          <input type="checkbox" class="dishcard__checkbox" />
+          <span class="dishcard__infos">Revisité</span>
+        </span>
+        <span class="dishcard__r-container">
           <span class="dishcard__price">18€</span>
-          <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
-        </div>
+          <span class="dishcard__added"><i class="fas fa-check-circle"></i></span>
+        </span>
       </label>
       <label class="dishcard">
-        <div class="dishcard__l-container">
+        <input type="checkbox" class="dishcard__checkbox" />
+        <span class="dishcard__l-container">
           <h3 class="dishcard__heading">Macaron au chocolat d'exception</h3>
-          <p class="dishcard__infos">Et glace à la vanille de Madagascar</p>
-        </div>
-        <div class="dishcard__r-container">
-          <input type="checkbox" class="dishcard__checkbox" />
+          <span class="dishcard__infos">Et glace à la vanille de Madagascar</span>
+        </span>
+        <span class="dishcard__r-container">
           <span class="dishcard__price">22€</span>
-          <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
-        </div>
+          <span class="dishcard__added"><i class="fas fa-check-circle"></i></span>
+        </span>
       </label>
       <label class="dishcard">
-        <div class="dishcard__l-container">
+        <input type="checkbox" class="dishcard__checkbox" />
+        <span class="dishcard__l-container">
           <h3 class="dishcard__heading">Mousse au chocolat</h3>
-          <p class="dishcard__infos">Au piment d'Espelette et à la truffe noire</p>
-        </div>
-        <div class="dishcard__r-container">
-          <input type="checkbox" class="dishcard__checkbox" />
+          <span class="dishcard__infos">Au piment d'Espelette et à la truffe noire</span>
+        </span>
+        <span class="dishcard__r-container">
           <span class="dishcard__price">23€</span>
-          <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
-        </div>
+          <span class="dishcard__added"><i class="fas fa-check-circle"></i></span>
+        </span>
       </label>
     </div>
   </section>
 
-  <section class="section section--btn">
-    <a href="" class="btn">Commander</a>
-  </section>
+  <a href="" class="btn btn--menu">Commander</a>
 
   <footer class="footer">
     <h2 class="footer__heading">ohmyfood</h2>
