--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -27,48 +27,48 @@
       <h2 class="section__heading section__heading--menu">Entrées</h2>
 
       <label class="dishcard">
-        <div class="dishcard__l-container">
+        <input type="checkbox" class="dishcard__checkbox" />
+        <span class="dishcard__l-container">
           <h3 class="dishcard__heading">Ravioles de foie gras</h3>
-          <p class="dishcard__infos">Accompagnés de leur crème à la truffe</p>
-        </div>
-        <div class="dishcard__r-container">
-          <input type="checkbox" class="dishcard__checkbox" />
+          <span class="dishcard__infos">Accompagnés de leur crème à la truffe</span>
+        </span>
+        <span class="dishcard__r-container">
           <span class="dishcard__price">25€</span>
-          <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
-        </div>
+          <span class="dishcard__added"><i class="fas fa-check-circle"></i></span>
+        </span>
       </label>
       <label class="dishcard">
-        <div class="dishcard__l-container">
+        <input type="checkbox" class="dishcard__checkbox" />
+        <span class="dishcard__l-container">
           <h3 class="dishcard__heading">Caviar osciètre</h3>
-          <p class="dishcard__infos">Sur blini à la farine de blé noir</p>
-        </div>
-        <div class="dishcard__r-container">
-          <input type="checkbox" class="dishcard__checkbox" />
+          <span class="dishcard__infos">Sur blini à la farine de blé noir</span>
+        </span>
+        <span class="dishcard__r-container">
           <span class="dishcard__price">35€</span>
-          <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
-        </div>
+          <span class="dishcard__added"><i class="fas fa-check-circle"></i></span>
+        </span>
       </label>
       <label class="dishcard">
-        <div class="dishcard__l-container">
+        <input type="checkbox" class="dishcard__checkbox" />
+        <span class="dishcard__l-container">
           <h3 class="dishcard__heading">Homard et espuma de potiron</h3>
-          <p class="dishcard__infos">Mariné aux zestes d'orange</p>
-        </div>
-        <div class="dishcard__r-container">
-          <input type="checkbox" class="dishcard__checkbox" />
+          <span class="dishcard__infos">Mariné aux zestes d'orange</span>
+        </span>
+        <span class="dishcard__r-container">
           <span class="dishcard__price">20€</span>
-          <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
-        </div>
+          <span class="dishcard__added"><i class="fas fa-check-circle"></i></span>
+        </span>
       </label>
       <label class="dishcard">
-        <div class="dishcard__l-container">
+        <input type="checkbox" class="dishcard__checkbox" />
+        <span class="dishcard__l-container">
           <h3 class="dishcard__heading">Foie gras de canard cuit entier</h3>
-          <p class="dishcard__infos">Confiture de figue et pain toasté</p>
-        </div>
-        <div class="dishcard__r-container">
-          <input type="checkbox" class="dishcard__checkbox" />
+          <span class="dishcard__infos">Confiture de figue et pain toasté</span>
+        </span>
+        <span class="dishcard__r-container">
           <span class="dishcard__price">35€</span>
-          <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
-        </div>
+          <span class="dishcard__added"><i class="fas fa-check-circle"></i></span>
+        </span>
       </label>
     </div>
   </section>
@@ -78,37 +78,37 @@
       <h2 class="section__heading section__heading--menu">Plats</h2>
 
       <label class="dishcard">
-        <div class="dishcard__l-container">
+        <input type="checkbox" class="dishcard__checkbox" />
+        <span class="dishcard__l-container">
           <h3 class="dishcard__heading">Noix de coquilles Saint-Jacques</h3>
-          <p class="dishcard__infos">Sur lit de purée de céleri-rave</p>
-        </div>
-        <div class="dishcard__r-container">
-          <input type="checkbox" class="dishcard__checkbox" />
+          <span class="dishcard__infos">Sur lit de purée de céleri-rave</span>
+        </span>
+        <span class="dishcard__r-container">
           <span class="dishcard__price">40€</span>
-          <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
-        </div>
+          <span class="dishcard__added"><i class="fas fa-check-circle"></i></span>
+        </span>
       </label>
       <label class="dishcard">
-        <div class="dishcard__l-container">
+        <input type="checkbox" class="dishcard__checkbox" />
+        <span class="dishcard__l-container">
           <h3 class="dishcard__heading">Langoustine poêlée</h3>
-          <p class="dishcard__infos">Purée de patate douce</p>
-        </div>
-        <div class="dishcard__r-container">
-          <input type="checkbox" class="dishcard__checkbox" />
+          <span class="dishcard__infos">Purée de patate douce</span>
+        </span>
+        <span class="dishcard__r-container">
           <span class="dishcard__price">35€</span>
-          <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
-        </div>
+          <span class="dishcard__added"><i class="fas fa-check-circle"></i></span>
+        </span>
       </label>
       <label class="dishcard">
-        <div class="dishcard__l-container">
+        <input type="checkbox" class="dishcard__checkbox" />
+        <span class="dishcard__l-container">
           <h3 class="dishcard__heading">Mijoté de queue de boeuf</h3>
-          <p class="dishcard__infos">Et riz sauvage aux zestes de citron</p>
-        </div>
-        <div class="dishcard__r-container">
-          <input type="checkbox" class="dishcard__checkbox" />
+          <span class="dishcard__infos">Et riz sauvage aux zestes de citron</span>
+        </span>
+        <span class="dishcard__r-container">
           <span class="dishcard__price">44€</span>
-          <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
-        </div>
+          <span class="dishcard__added"><i class="fas fa-check-circle"></i></span>
+        </span>
       </label>
     </div>
   </section>
@@ -118,44 +118,42 @@
       <h2 class="section__heading section__heading--menu">Desserts</h2>
 
       <label class="dishcard">
-        <div class="dishcard__l-container">
+        <input type="checkbox" class="dishcard__checkbox" />
+        <span class="dishcard__l-container">
           <h3 class="dishcard__heading">Macaron noisette et chocolat</h3>
-          <p class="dishcard__infos">Glace au caramel brun et sel de Guérande</p>
-        </div>
-        <div class="dishcard__r-container">
-          <input type="checkbox" class="dishcard__checkbox" />
+          <span class="dishcard__infos">Glace au caramel brun et sel de Guérande</span>
+        </span>
+        <span class="dishcard__r-container">
           <span class="dishcard__price">18€</span>
-          <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
-        </div>
+          <span class="dishcard__added"><i class="fas fa-check-circle"></i></span>
+        </span>
       </label>
       <label class="dishcard">
-        <div class="dishcard__l-container">
+        <input type="checkbox" class="dishcard__checkbox" />
+        <span class="dishcard__l-container">
           <h3 class="dishcard__heading">Baba au rhum revisité</h3>
-          <p class="dishcard__infos">Avec son coulis de citron</p>
-        </div>
-        <div class="dishcard__r-container">
-          <input type="checkbox" class="dishcard__checkbox" />
+          <span class="dishcard__infos">Avec son coulis de citron</span>
+        </span>
+        <span class="dishcard__r-container">
           <span class="dishcard__price">22€</span>
-          <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
-        </div>
+          <span class="dishcard__added"><i class="fas fa-check-circle"></i></span>
+        </span>
       </label>
       <label class="dishcard">
-        <div class="dishcard__l-container">
+        <input type="checkbox" class="dishcard__checkbox" />
+        <span class="dishcard__l-container">
           <h3 class="dishcard__heading">Tarte au citron meringuée</h3>
-          <p class="dishcard__infos">Déstructurée</p>
-        </div>
-        <div class="dishcard__r-container">
-          <input type="checkbox" class="dishcard__checkbox" />
+          <span class="dishcard__infos">Déstructurée</span>
+        </span>
+        <span class="dishcard__r-container">
           <span class="dishcard__price">23€</span>
-          <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
-        </div>
+          <span class="dishcard__added"><i class="fas fa-check-circle"></i></span>
+        </span>
       </label>
     </div>
   </section>
 
-  <section class="section section--btn">
-    <a href="" class="btn">Commander</a>
-  </section>
+  <a href="" class="btn btn--menu">Commander</a>
 
   <footer class="footer">
     <h2 class="footer__heading">ohmyfood</h2>
