Change dishcards h3 tags with span tags

--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -29,7 +29,7 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <h3 class="dishcard__heading">Fricassée d'escargot</h3>
+          <span class="dishcard__heading">Fricassée d'escargot</span>
           <span class="dishcard__infos">Au piment d'espelette</span>
         </span>
         <span class="dishcard__r-container">
@@ -40,7 +40,7 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <h3 class="dishcard__heading">Foie gras de canard mi-cuit</h3>
+          <span class="dishcard__heading">Foie gras de canard mi-cuit</span>
           <span class="dishcard__infos">Et ses copeaux de truffe noire</span>
         </span>
         <span class="dishcard__r-container">
@@ -51,7 +51,7 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <h3 class="dishcard__heading">Oeuf au plat</h3>
+          <span class="dishcard__heading">Oeuf au plat</span>
           <span class="dishcard__infos">Assaisonné à la truffe sur lit de caviar</span>
         </span>
         <span class="dishcard__r-container">
@@ -69,7 +69,7 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <h3 class="dishcard__heading">Filet de boeuf aux herbes</h3>
+          <span class="dishcard__heading">Filet de boeuf aux herbes</span>
           <span class="dishcard__infos">Accompagné de sa ribambelle de légumes</span>
         </span>
         <span class="dishcard__r-container">
@@ -80,7 +80,7 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <h3 class="dishcard__heading">Parmentier de queue de boeuf</h3>
+          <span class="dishcard__heading">Parmentier de queue de boeuf</span>
           <span class="dishcard__infos">À la truffe noire sur sa purée de panais</span>
         </span>
         <span class="dishcard__r-container">
@@ -91,7 +91,7 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <h3 class="dishcard__heading">Filet de turbot</h3>
+          <span class="dishcard__heading">Filet de turbot</span>
           <span class="dishcard__infos">Aux agrumes</span>
         </span>
         <span class="dishcard__r-container">
@@ -109,7 +109,7 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <h3 class="dishcard__heading">Paris-Brest</h3>
+          <span class="dishcard__heading">Paris-Brest</span>
           <span class="dishcard__infos">Revisité</span>
         </span>
         <span class="dishcard__r-container">
@@ -120,7 +120,7 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <h3 class="dishcard__heading">Macaron au chocolat d'exception</h3>
+          <span class="dishcard__heading">Macaron au chocolat d'exception</span>
           <span class="dishcard__infos">Et glace à la vanille de Madagascar</span>
         </span>
         <span class="dishcard__r-container">
@@ -131,7 +131,7 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <h3 class="dishcard__heading">Mousse au chocolat</h3>
+          <span class="dishcard__heading">Mousse au chocolat</span>
           <span class="dishcard__infos">Au piment d'Espelette et à la truffe noire</span>
         </span>
         <span class="dishcard__r-container">
