--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -29,7 +29,7 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <h3 class="dishcard__heading">Tartare de thon</h3>
+          <span class="dishcard__heading">Tartare de thon</span>
           <span class="dishcard__infos">Assaisonné au yuzu</span>
         </span>
         <span class="dishcard__r-container">
@@ -40,7 +40,7 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <h3 class="dishcard__heading">Bouchée de homard croustillant</h3>
+          <span class="dishcard__heading">Bouchée de homard croustillant</span>
           <span class="dishcard__infos">Et sa farandole de petits légumes</span>
         </span>
         <span class="dishcard__r-container">
@@ -51,7 +51,7 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <h3 class="dishcard__heading">Velouté de cèpes</h3>
+          <span class="dishcard__heading">Velouté de cèpes</span>
           <span class="dishcard__infos">Aux truffes</span>
         </span>
         <span class="dishcard__r-container">
@@ -69,7 +69,7 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <h3 class="dishcard__heading">Poulet rôti aux herbes de Provence</h3>
+          <span class="dishcard__heading">Poulet rôti aux herbes de Provence</span>
           <span class="dishcard__infos">Et sa crème de truffe</span>
         </span>
         <span class="dishcard__r-container">
@@ -80,7 +80,7 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <h3 class="dishcard__heading">Langouste rôtie</h3>
+          <span class="dishcard__heading">Langouste rôtie</span>
           <span class="dishcard__infos">Et ses légumes de saison</span>
         </span>
         <span class="dishcard__r-container">
@@ -91,7 +91,7 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <h3 class="dishcard__heading">Côte de boeuf Angus</h3>
+          <span class="dishcard__heading">Côte de boeuf Angus</span>
           <span class="dishcard__infos">Et sa purée de panais</span>
         </span>
         <span class="dishcard__r-container">
@@ -109,7 +109,7 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <h3 class="dishcard__heading">Farandole de desserts</h3>
+          <span class="dishcard__heading">Farandole de desserts</span>
           <span class="dishcard__infos">Du chef</span>
         </span>
         <span class="dishcard__r-container">
@@ -120,7 +120,7 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <h3 class="dishcard__heading">Crème brulée</h3>
+          <span class="dishcard__heading">Crème brulée</span>
           <span class="dishcard__infos">Revisitée</span>
         </span>
         <span class="dishcard__r-container">
@@ -131,7 +131,7 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <h3 class="dishcard__heading">Tiramisu</h3>
+          <span class="dishcard__heading">Tiramisu</span>
           <span class="dishcard__infos">À la noisette</span>
         </span>
         <span class="dishcard__r-container">
