--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -29,7 +29,7 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <h3 class="dishcard__heading">Tartare de poulpe acidulé</h3>
+          <span class="dishcard__heading">Tartare de poulpe acidulé</span>
           <span class="dishcard__infos">Aux zestes d'orange</span>
         </span>
         <span class="dishcard__r-container">
@@ -40,7 +40,7 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <h3 class="dishcard__heading">Velouté de légumes d'antan</h3>
+          <span class="dishcard__heading">Velouté de légumes d'antan</span>
           <span class="dishcard__infos">Carotte, panais, topinambour</span>
         </span>
         <span class="dishcard__r-container">
@@ -51,7 +51,7 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <h3 class="dishcard__heading">Soupe à l'oignon</h3>
+          <span class="dishcard__heading">Soupe à l'oignon</span>
           <span class="dishcard__infos">Revisitée</span>
         </span>
         <span class="dishcard__r-container">
@@ -69,7 +69,7 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <h3 class="dishcard__heading">Coquilles Saint-Jacques</h3>
+          <span class="dishcard__heading">Coquilles Saint-Jacques</span>
           <span class="dishcard__infos">Accompagnées d'une purée de panais</span>
         </span>
         <span class="dishcard__r-container">
@@ -80,7 +80,7 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <h3 class="dishcard__heading">Magret de canard</h3>
+          <span class="dishcard__heading">Magret de canard</span>
           <span class="dishcard__infos">Et parmentier de pommes de terre</span>
         </span>
         <span class="dishcard__r-container">
@@ -91,7 +91,7 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <h3 class="dishcard__heading">Pigeonneau d’Ille-et-Vilaine</h3>
+          <span class="dishcard__heading">Pigeonneau d’Ille-et-Vilaine</span>
           <span class="dishcard__infos">Sur son lit de gnocchis aux légumes</span>
         </span>
         <span class="dishcard__r-container">
@@ -109,7 +109,7 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <h3 class="dishcard__heading">Pétales de violettes glacés</h3>
+          <span class="dishcard__heading">Pétales de violettes glacés</span>
           <span class="dishcard__infos">Et purée de noisettes</span>
         </span>
         <span class="dishcard__r-container">
@@ -120,7 +120,7 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <h3 class="dishcard__heading">Fondant au chocolat</h3>
+          <span class="dishcard__heading">Fondant au chocolat</span>
           <span class="dishcard__infos">Revisité</span>
         </span>
         <span class="dishcard__r-container">
@@ -131,7 +131,7 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <h3 class="dishcard__heading">Millefeuille croustillant</h3>
+          <span class="dishcard__heading">Millefeuille croustillant</span>
           <span class="dishcard__infos">Myrtilles et pâte d’amande</span>
         </span>
         <span class="dishcard__r-container">
