--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -29,7 +29,7 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <h3 class="dishcard__heading">Ravioles de foie gras</h3>
+          <span class="dishcard__heading">Ravioles de foie gras</span>
           <span class="dishcard__infos">Accompagnés de leur crème à la truffe</span>
         </span>
         <span class="dishcard__r-container">
@@ -40,7 +40,7 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <h3 class="dishcard__heading">Caviar osciètre</h3>
+          <span class="dishcard__heading">Caviar osciètre</span>
           <span class="dishcard__infos">Sur blini à la farine de blé noir</span>
         </span>
         <span class="dishcard__r-container">
@@ -51,7 +51,7 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <h3 class="dishcard__heading">Homard et espuma de potiron</h3>
+          <span class="dishcard__heading">Homard et espuma de potiron</span>
           <span class="dishcard__infos">Mariné aux zestes d'orange</span>
         </span>
         <span class="dishcard__r-container">
@@ -62,7 +62,7 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <h3 class="dishcard__heading">Foie gras de canard cuit entier</h3>
+          <span class="dishcard__heading">Foie gras de canard cuit entier</span>
           <span class="dishcard__infos">Confiture de figue et pain toasté</span>
         </span>
         <span class="dishcard__r-container">
@@ -80,7 +80,7 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <h3 class="dishcard__heading">Noix de coquilles Saint-Jacques</h3>
+          <span class="dishcard__heading">Noix de coquilles Saint-Jacques</span>
           <span class="dishcard__infos">Sur lit de purée de céleri-rave</span>
         </span>
         <span class="dishcard__r-container">
@@ -91,7 +91,7 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <h3 class="dishcard__heading">Langoustine poêlée</h3>
+          <span class="dishcard__heading">Langoustine poêlée</span>
           <span class="dishcard__infos">Purée de patate douce</span>
         </span>
         <span class="dishcard__r-container">
@@ -102,7 +102,7 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <h3 class="dishcard__heading">Mijoté de queue de boeuf</h3>
+          <span class="dishcard__heading">Mijoté de queue de boeuf</span>
           <span class="dishcard__infos">Et riz sauvage aux zestes de citron</span>
         </span>
         <span class="dishcard__r-container">
@@ -120,7 +120,7 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <h3 class="dishcard__heading">Macaron noisette et chocolat</h3>
+          <span class="dishcard__heading">Macaron noisette et chocolat</span>
           <span class="dishcard__infos">Glace au caramel brun et sel de Guérande</span>
         </span>
         <span class="dishcard__r-container">
@@ -131,7 +131,7 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <h3 class="dishcard__heading">Baba au rhum revisité</h3>
+          <span class="dishcard__heading">Baba au rhum revisité</span>
           <span class="dishcard__infos">Avec son coulis de citron</span>
         </span>
         <span class="dishcard__r-container">
@@ -142,7 +142,7 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <h3 class="dishcard__heading">Tarte au citron meringuée</h3>
+          <span class="dishcard__heading">Tarte au citron meringuée</span>
           <span class="dishcard__infos">Déstructurée</span>
         </span>
         <span class="dishcard__r-container">
